# geo-dataset-analyser

./: .gitignore  README.md  pyproject.toml
src/geo_dataset_analyser/: main.py
src/geo_dataset_analyser/utils/: download.py  extract_utils.py
