[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-dataset-analyser"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vidyasagar0405", email = "vidyasagar0405@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/vidyasagar0405/geo-dataset-analyser#readme"
Issues = "https://github.com/vidyasagar0405/geo-dataset-analyser/issues"
Source = "https://github.com/vidyasagar0405/geo-dataset-analyser"

[tool.hatch.version]
path = "src/geo_dataset_analyser/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/geo_dataset_analyser tests}"

[tool.coverage.run]
source_pkgs = ["geo_dataset_analyser", "tests"]
branch = true
parallel = true
omit = [
  "src/geo_dataset_analyser/__about__.py",
]

[tool.coverage.paths]
geo_dataset_analyser = ["src/geo_dataset_analyser", "*/geo-dataset-analyser/src/geo_dataset_analyser"]
tests = ["tests", "*/geo-dataset-analyser/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
